# SDL_GUI

./: CMakeLists.txt  README.md
include/: Core.h  Text.h  Thread.h  UI.h  UI_keys.h  Window.h
src/: Core0.cpp  Core1.cpp  Text.cpp  Thread.cpp  UI.cpp  Window.cpp  main.cpp
